--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,4 +1,4 @@
-# Stage 1 - Build
+# -------- Stage 1 : Build --------
 FROM node:20-alpine AS builder
 
 WORKDIR /app
@@ -11,10 +11,12 @@ COPY . .
 RUN npm run build
 
 
-# Stage 2 - Production
+# -------- Stage 2 : Production --------
 FROM node:20-alpine
 
 WORKDIR /app
+
+ENV NODE_ENV=production
 
 COPY --from=builder /app ./
 
